--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -21,6 +21,7 @@ services:
       - ./frontend:/usr/src/app
       - frontend_home_npm:/home/node/.npm
       - frontend_node_modules:/usr/src/app/node_modules
+      - ./frontend/node_modules/.bin:/usr/src/app/node_modules/.bin
     environment:
       HANDLER: application/public/index.php
 
