--- a/frontend/Dockerfile-dev
+++ b/frontend/Dockerfile-dev
@@ -20,15 +20,9 @@ RUN node_user=node \
     && groupmod -g ${GROUP_ID} ${node_primary_group} \
     && usermod -u ${USER_ID} -g ${GROUP_ID} ${node_user} \
     && mkdir /home/${node_user}/.npm \
-    && chown ${node_user}:${node_primary_group} /home/${node_user}/.npm \
-    && mkdir /usr/src/app/node_modules \
-    && chown ${node_user}:${node_primary_group} /usr/src/app/node_modules \
-    && mkdir /usr/src/app/node_modules/.bin \
-    && chown ${node_user}:${node_primary_group} /usr/src/app/node_modules/.bin
+    && chown ${node_user}:${node_primary_group} /home/${node_user}/.npm
 
 VOLUME /home/node/.npm
-VOLUME /usr/src/app/node_modules
-VOLUME /usr/src/app/node_modules/.bin
 
 USER node
 
