--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,6 +11,7 @@
     "@types/react": "^17.0.3",
     "@types/react-dom": "^17.0.2",
     "@types/react-router-dom": "^5.1.7",
+    "axios": "^0.21.1",
     "grommet": "^2.16.3",
     "grommet-icons": "^4.5.0",
     "react": "^17.0.1",
