--- a/backend/package.json
+++ b/backend/package.json
@@ -10,6 +10,8 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@hapi/joi": "^17.1.1",
+    "bcryptjs": "^2.4.3",
     "connect-redis": "^5.1.0",
     "express": "^4.17.1",
     "express-session": "^1.17.1",
@@ -17,9 +19,11 @@
     "mongoose": "^5.12.0"
   },
   "devDependencies": {
+    "@types/bcryptjs": "^2.4.2",
     "@types/connect-redis": "0.0.16",
     "@types/express": "^4.17.11",
     "@types/express-session": "^1.17.3",
+    "@types/hapi__joi": "^17.1.6",
     "@types/ioredis": "^4.22.0",
     "@types/mongodb": "^3.6.9",
     "@types/mongoose": "^5.10.3",
