Set up AWS certificate for mongo connection

--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -6,6 +6,8 @@ WORKDIR /usr/src/app
 
 RUN mkdir -p /usr/src/app
 
+RUN wget https://s3.amazonaws.com/rds-downloads/rds-combined-ca-bundle.pem
+
 COPY . /usr/src/app
 
 RUN npm ci \
